tests/omitfixaroundsolve.svx
; pos=fail warn=0 error=1
; Regression test for bug fixed in 1.2.14
a 0 012 15.0 +12
*fix a
*solve
*fix b
b 1 123 10.0 -01
